--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-
-
 :root {
     --dark01: #000000;
     --dark02: #333333;
@@ -30,7 +28,9 @@
     --smallText: calc(var(--baseFont)* 0.5);
 }
 
-/* COLOR IDs */
+/* COLOR IDs 
+------------------------------------
+*/
 #light {
     background-color: var(--light01);
 }
@@ -122,7 +122,7 @@ p {
 
 }
 
-header {
+header {  /*TODO: make less shitty */
     color: var(--light01);
     font-size: var(--h2);
     font-weight: 900;
@@ -160,7 +160,7 @@ hr {
     background-color: rgba(0, 0, 0, 0.03);
 }
 
-/* Flex Box */
+/*     flex box containers--------------------- */
 .row {
     display: flex;
     flex-direction: row;
@@ -176,24 +176,28 @@ hr {
     justify-content: center;
 }
 
-/*    forms---------------------*/
-
-
+/* FORMS STYLING
+---------------------------------
+*/
 input[type=text],
 select,
 textarea {
 
     margin: 0.5em;
     padding: 0.5em;
+    
+    width: 100%;
+    
+    opacity: 1;
 
     font-size: var(--baseFont);
     font-weight: 300;
-    color: var(--green);
+    color: var(--dark03);
     background-color: var(--light01);
 
 
     border: none;
-    box-shadow: inset 0 -0.4em 0 -0.2em rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0 -0.4em 0 -0.3em rgba(0, 0, 0, 0.5);
     border-radius: 0.5em;
 
     transition: all ease-in-out 0.2s;
@@ -206,7 +210,8 @@ select:hover,
 select:focus,
 textarea:hover,
 textarea:focus {
-    box-shadow: inset 0 -0.7em 0 -0.35em var(--green);
+    opacity: 1;
+    box-shadow: inset 0 -0.6em 0 -0.35em var(--green);
     outline: 0 !important;
     /*    transform: translateY(0.04em);*/
 }
@@ -341,12 +346,10 @@ fieldset {
 }
 
 #check {
-    transition: 0.5s ease-out;
-    
+    transition: 0.5s ease-out;   
 }
 #check:hover{
-    transform: rotate(-10deg) scale(1.25);
-    
+    transform: rotate(-10deg) scale(1.25);   
 }
 
 
