--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,8 @@ p {
 
 }
 
-header {  /*TODO: make less shitty */
+header {
+    /*TODO: make less shitty */
     color: var(--light01);
     font-size: var(--h2);
     font-weight: 900;
@@ -185,9 +186,9 @@ textarea {
 
     margin: 0.5em;
     padding: 0.5em;
-    
+
     width: 100%;
-    
+
     opacity: 1;
 
     font-size: var(--baseFont);
@@ -282,7 +283,7 @@ fieldset {
 #goal {
     padding: 0em 0em 0 0em;
     margin: 0;
-    
+
     min-width: 10em;
 
     font-family: 'Playfair Display', serif;
@@ -296,7 +297,7 @@ fieldset {
     border: none;
     border-bottom: 0.07em var(--red) solid;
     border-radius: 0;
-    box-shadow: 0.0em 0.1em 0.01em -0.01em rgba(214,6,6,0.25);
+    box-shadow: 0.0em 0.1em 0.01em -0.01em rgba(214, 6, 6, 0.25);
 
     transition: all ease-in-out 0.2s;
 }
@@ -306,40 +307,45 @@ fieldset {
 }
 
 
-#goal input{
+#goal input {
     width: 100%;
 }
 
 #control {
-    
-    padding: 0.7em 1em;
+
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    
-    width: 15%;
-    
+
+    width: -webkit-fit-content;
+    height: -webkit-fit-content;
+    width: -moz-fit-content;
+    height: -moz-fit-content;
+
     font-size: var(--h3);
     font-weight: 300;
-    
+    text-align: center;
+
     border-radius: 0.2em;
 
     background-color: rgba(200, 20, 20, 0.2);
     color: var(--light01);
-    
+
     transform: translate(00%, 95%);
 }
 
-#refresh{
+#refresh {
+    padding: 2vh 2vw;
     transition: .4s ease-in-out;
 }
-#refresh:hover{
+
+#refresh:hover {
     transform: rotate(720deg) scale(1.25);
-    color: var(--darkBlue);
+    color: var(--lightBlue);
     cursor: pointer;
 }
 
 #new {
+    padding: 2vh 2vw;
     transition: 0.4s ease-out;
 }
 
@@ -350,9 +356,11 @@ fieldset {
 }
 
 #check {
-    transition: 0.5s ease-out;   
+    padding: 2vh 2vw;
+    transition: 0.5s ease-out;
 }
-#check:hover{
+
+#check:hover {
     transform: rotate(-10deg) scale(1.25);
     color: var(--green);
     cursor: pointer;
