--- a/views/landing.html
+++ b/views/landing.html
@@ -3,11 +3,10 @@
     <span id="goal" contenteditable="true">today I am going to...</span>
 
     <div id="control">
-<!--
-        <i id="refresh" class="fas fa-sync-alt"></i>
-        <i id="new" class="fas fa-sticky-note"></i>
--->
-        <a id="check" onclick="check()"><i class="fas fa-check"></i></a>
+
+        <i id="writing" onclick="writing()" class="fas fa-sticky-note"></i>
+        <i id="draw" onclick="draw()" class="fas fa-pencil-alt"></i>
+        
     </div>
 
 </div>
