--- a/views/landing.html
+++ b/views/landing.html
@@ -1,3 +1,41 @@
+<div class="content">
+    
+<!----header--->
+    <div class="row">
+        <div class="col">
+            <span id="goal" contenteditable="true">today I am going to...</span>
+        </div>
+    </div>
+    <br><br><br>
+    
+    <div class="row">
+        <div class="col">
+            <i id="writing" onclick="writing()" class="fas fa-pencil-alt"><br>Write</i>
+        </div>
+        <div class="col">
+            <i id="garden" onclick="writing()" class="fas fa-seedling"><br>Plant</i>
+        </div>
+        <div class="col">
+            <i id="read" onclick="writing()" class="fas fa-book-reader"><br>Read</i>
+        </div>
+    </div>
+    
+    <br><br>
+    
+    <div class="row">
+        <div class="col">
+            <i id="writing" onclick="writing()" class="fas fa-pencil-ruler"><br>Craft</i>
+        </div>
+        <div class="col">
+            <i id="writing" onclick="writing()" class="fas fa- fa-music"><br>Music</i>
+        </div>
+    </div>
+    
+</div>
+
+
+
+<!--
 <div id="intro">
 
     <span id="goal" contenteditable="true">today I am going to...</span>
@@ -10,3 +48,4 @@
     </div>
 
 </div>
+-->
