added more empty view files

--- a/views/landing.html
+++ b/views/landing.html
@@ -1,9 +1,10 @@
+
 <div class="content">
     
 <!----header--->
     <div class="row">
         <div class="col">
-            <span id="goal" contenteditable="true">today I am going to...</span>
+            <span id="goal">today I am going to...</span>
         </div>
     </div>
     <br><br><br>
