connected garden, draw, and read

--- a/views/landing.html
+++ b/views/landing.html
@@ -14,10 +14,10 @@
             <i id="writing" onclick="writing()" class="fas fa-pencil-alt"><br>Write</i>
         </div>
         <div class="col">
-            <i id="garden" onclick="writing()" class="fas fa-seedling"><br>Plant</i>
+            <i id="garden" onclick="garden()" class="fas fa-seedling"><br>Plant</i>
         </div>
         <div class="col">
-            <i id="read" onclick="writing()" class="fas fa-book-reader"><br>Read</i>
+            <i id="read" onclick="read()" class="fas fa-book-reader"><br>Read</i>
         </div>
     </div>
     
@@ -25,7 +25,7 @@
     
     <div class="row">
         <div class="col">
-            <i id="writing" onclick="writing()" class="fas fa-pencil-ruler"><br>Craft</i>
+            <i id="writing" onclick="draw()" class="fas fa-pencil-ruler"><br>Craft</i>
         </div>
         <div class="col">
             <i id="writing" onclick="writing()" class="fas fa- fa-music"><br>Music</i>
