--- a/views/landing.html
+++ b/views/landing.html
@@ -1,38 +1,48 @@
-
 <div class="content">
-    
-<!----header--->
+
+    <!----header--->
     <div class="row">
         <div class="col">
             <span id="goal">today I am going to...</span>
         </div>
     </div>
     <br><br><br>
-    
-    <div class="row iconRow">
-        <div class="col">
-            <i id="writing" onclick="writing()" class="fas fa-pencil-alt borderPop"><br>Write</i>
-        </div>
-        <div class="col">
-            <i id="garden" onclick="garden()" class="fas fa-seedling borderPop"><br>Plant</i>
-        </div>
-        <div class="col">
-            <i id="read" onclick="read()" class="fas fa-book-reader borderPop"><br>Read</i>
-        </div>
-    </div>
-    
-    <br><br>
-    
-    <div class="row iconRow">
-        <div class="col">
-            <i id="writing" onclick="draw()" class="fas fa-pencil-ruler borderPop"><br>Craft</i>
-        </div>
-        <div class="col">
 
-            <i id="writing" onclick="writing()" class="fas fa- fa-music borderPop"><br>Music</i>
+    <div class="row iconRow">
+        <div class="col icon lightBlue" onclick="writing()">
+            <i id="writing" class="fas fa-pencil-alt borderPop "></i>
+            Write
+        </div>
+        <div class="col icon green" onclick="garden()">
+            <i id="garden" class="fas fa-seedling borderPop "></i>
+            Plant
+        </div>
+        <div class="col icon purple" onclick="read()">
+            <i id="read"  class="fas fa-book-reader borderPop "></i>
+            Read
         </div>
     </div>
-    
+
+    <br><br>
+
+    <div class="row iconRow">
+        <div class="col icon red" onclick="draw()">
+            <i id="writing"  class="fas fa-pencil-ruler borderPop "></i>
+            Craft
+        </div>
+        <div class="col icon darkBlue" onclick="music()">
+
+            <i id="music"  class="fas fa-music borderPop "></i>
+            Music
+        </div>
+    </div>
+    <div class="row">
+        <div class="col icon lightBlue" onclick="list()">
+            <i>go to list</i>
+        </div>
+    </div>
+
+
 </div>
 
 
