--- a/views/create.html
+++ b/views/create.html
@@ -16,5 +16,36 @@
 <p> 4) Squirt different color dye in desired sections </p>
 <p> 5) Let dry, rinse, and wash </p>
 
+<br> 
+<br> 
+<!-- Task/Challenge 2 -->
+<h2> Make a playlist - the perfect way to keep your vibe strong through quarantine.</h2>
 
-<!-- Taks/Challenge 2 -->
+<h3> Supplies: </h3>
+<p> - Music streaming site (Apple Music, Spotify, Youtube - premium or not, doesn’t matter) </p>
+
+<h3> Steps: </h3>
+<p> 1) Pick a theme - a big concept (like love, or friendship), weather (like rain or sunny), day of the week, month, animal, mood (like happy, sad) </p>
+<p> 2) Pick a cover photo - You can pick one from google or even take your own! It can fit your theme or just be something you like. </p>
+<p> 3) Add songs that fit the theme - add songs you know, add songs you like, listen to some new songs and add those! </p> 
+
+<br> 
+<br> 
+<!-- Task/Challenge 3 -->
+<h2> Make a mood board - share your dreams, current mood, or anything else your feeling visually.</h2>
+
+<h3> Supplies: </h3>
+<p> - Magazines, photos </p>
+<p> - Stickers </p>
+<p> - Glue </p>
+<p> - Tape </p>
+<p> - Paper </p>
+<p> - Scissors </p>
+
+<h3> Steps: </h3>
+<p> 1) Find some photos, phrases or words, colors, images that you like and cut them out </p>
+<p> 2) Place down a larger piece of paper  </p>
+<p> 3) Lay out the images/photos/words/phrases you like and re-arrange a thousand more times until you find a composition you enjoy - don’t be afraid to layer and overlap </p> 
+<p> 4) Tape or glue your content down </p>
+<p> 5) Add stickers or glitter or draw over things </p>
+
