--- a/views/create.html
+++ b/views/create.html
@@ -10,11 +10,11 @@
 <p> - White clothes </p>
 
 <h3> Steps: </h3>
-<p> 1) Lay down your protective tarp so you don’t dye your table </p>
-<p> 2) Take your white article of clothing and soak it in water </p>
-<p> 3) Wring it out and tie with rubber bands </p> 
-<p> 4) Squirt different color dye in desired sections </p>
-<p> 5) Let dry, rinse, and wash </p>
+<p> 1) Lay down your protective tarp so you don’t dye your table. </p>
+<p> 2) Take your white article of clothing and soak it in water. </p>
+<p> 3) Wring it out and tie with rubber bands. </p> 
+<p> 4) Squirt different color dye in desired sections. </p>
+<p> 5) Let dry, rinse, and wash. </p>
 
 <br> 
 <br> 
@@ -25,7 +25,7 @@
 <p> - Music streaming site (Apple Music, Spotify, Youtube - premium or not, doesn’t matter) </p>
 
 <h3> Steps: </h3>
-<p> 1) Pick a theme - a big concept (like love, or friendship), weather (like rain or sunny), day of the week, month, animal, mood (like happy, sad) </p>
+<p> 1) Pick a theme - a big concept (like love, or friendship), weather (like rain or sunny), day of the week, month, animal, mood (like happy, sad). </p>
 <p> 2) Pick a cover photo - You can pick one from google or even take your own! It can fit your theme or just be something you like. </p>
 <p> 3) Add songs that fit the theme - add songs you know, add songs you like, listen to some new songs and add those! </p> 
 
@@ -43,9 +43,9 @@
 <p> - Scissors </p>
 
 <h3> Steps: </h3>
-<p> 1) Find some photos, phrases or words, colors, images that you like and cut them out </p>
-<p> 2) Place down a larger piece of paper  </p>
-<p> 3) Lay out the images/photos/words/phrases you like and re-arrange a thousand more times until you find a composition you enjoy - don’t be afraid to layer and overlap </p> 
-<p> 4) Tape or glue your content down </p>
-<p> 5) Add stickers or glitter or draw over things </p>
+<p> 1) Find some photos, phrases or words, colors, images that you like and cut them out .</p>
+<p> 2) Place down a larger piece of paper.  </p>
+<p> 3) Lay out the images/photos/words/phrases you like and re-arrange a thousand more times until you find a composition you enjoy - don’t be afraid to layer and overlap. </p> 
+<p> 4) Tape or glue your content down. </p>
+<p> 5) Add stickers or glitter or draw over things. </p>
 
