--- a/views/draw.html
+++ b/views/draw.html
@@ -10,10 +10,10 @@
 <p> - Paint </p>
 
 <h3> Steps: </h3>
-<p> 1) Draw a random line going all the way across your canvas from one side to another </p>
-<p> 2) Draw some more lines - get crazy! Make a pattern of lines, draw some shapes, make it look abstract </p>
-<p> 3) Label all the white spaces (all the spaces you want to be filled with color at least)  with a number in pencil </p> 
-<p> 4) Assign paints to each number so that each number is a unique color </p>
+<p> 1) Draw a random line going all the way across your canvas from one side to another. </p>
+<p> 2) Draw some more lines - get crazy! Make a pattern of lines, draw some shapes, make it look abstract. </p>
+<p> 3) Label all the white spaces (all the spaces you want to be filled with color at least)  with a number in pencil. </p> 
+<p> 4) Assign paints to each number so that each number is a unique color. </p>
 <p> 5) Fill in the spaces! </p>
 
 <br> 
@@ -27,10 +27,10 @@
 
 <h3> Steps: </h3>
 <p> 1) Stand up, close your eyes, and spin around. Stop. First thing you lay eyes on is now your muse. </p>
-<p> 2) Situate yourself so you’re sitting at an angle you want to draw this object at</p>
-<p> 3) Sketch with pencil</p> 
-<p> 4) Add color </p>
-<p> - If you're feeling extra funky, add a cool background! </p>
+<p> 2) Situate yourself so you’re sitting at an angle you want to draw this object at.</p>
+<p> 3) Sketch with pencil.</p> 
+<p> 4) Add color. </p>
+<p> 5) If you're feeling extra funky, add a cool background! </p>
 
 <br> 
 <br> 
@@ -42,8 +42,8 @@
 <p> - Writing utensils (with color if you want) </p>
 
 <h3> Steps: </h3>
-<p> 1) Go to your favorite internet browser and search for a random animal generator - generate a random animal </p>
-<p> 2) Draw that animal </p>
-<p> 3) Now go back to that generator and generate another animal </p> 
-<p> 4) Erase features of your first animal and redraw them as the other animal - erase your monkey’s feat and give him duck feet </p>
+<p> 1) Go to your favorite internet browser and search for a random animal generator - generate a random animal. </p>
+<p> 2) Draw that animal. </p>
+<p> 3) Now go back to that generator and generate another animal. </p> 
+<p> 4) Erase features of your first animal and redraw them as the other animal - erase your monkey’s feat and give him duck feet. </p>
 <p> 5) Color it if you want and then come up with a cool new name for your species. </p>
