--- a/views/myList.html
+++ b/views/myList.html
@@ -1,13 +1,22 @@
-<script>    
-    document.getElementById("goal01").innerHTML = localStorage.getItem("goal01");
-    document.getElementById("goal02").innerHTML = localStorage.getItem("goal02");
-    document.getElementById("goal03").innerHTML = localStorage.getItem("goal03");
-    
+<script>
+    document.getElementById("goal01").innerHTML = localStorage.getItem("goal_01_00");
+
+    document.getElementById("step01").innerHTML = localStorage.getItem("goal_01_01");
+    document.getElementById("step02").innerHTML = localStorage.getItem("goal_01_02");
+    document.getElementById("step03").innerHTML = localStorage.getItem("goal_01_03");
+    document.getElementById("step04").innerHTML = localStorage.getItem("goal_01_04");
+    document.getElementById("step05").innerHTML = localStorage.getItem("goal_01_05");
+
 </script>
 
 <h2>My Goals</h2>
-<span id="goal01"></span>
-<span id="goal02"></span>
-<span id="goal03"></span>
-
-
+<div class="section">
+    <h3 id="goal01"></h3>
+    <ul>
+        <li><span id="step01"></span></li>
+        <li><span id="step02"></span></li>
+        <li><span id="step03"></span></li>
+        <li><span id="step04"></span></li>
+        <li><span id="step05"></span></li>
+    </ul>
+</div>
