border pop animation for all the icons. Added a border box element for sudo classes. Made icons position relative

--- a/views/landing.html
+++ b/views/landing.html
@@ -9,16 +9,17 @@
     <br><br><br>
 
     <div class="row iconRow">
-        <div class="col icon lightBlue" onclick="writing()">
-            <i id="writing" class="fas fa-pencil-alt borderPop "></i>
+        <div class="col icon lightBlue borderPop 
+" onclick="writing()">
+            <i id="writing" class="fas fa-pencil-alt  "></i>
             Write
         </div>
-        <div class="col icon green" onclick="garden()">
-            <i id="garden" class="fas fa-seedling borderPop "></i>
+        <div class="col icon green borderPop" onclick="garden()">
+            <i id="garden" class="fas fa-seedling"></i>
             Plant
         </div>
-        <div class="col icon purple" onclick="read()">
-            <i id="read"  class="fas fa-book-reader borderPop "></i>
+        <div class="col icon purple borderPop" onclick="read()">
+            <i id="read"  class="fas fa-book-reader"></i>
             Read
         </div>
     </div>
@@ -26,18 +27,18 @@
     <br><br>
 
     <div class="row iconRow">
-        <div class="col icon red" onclick="draw()">
-            <i id="writing"  class="fas fa-pencil-ruler borderPop "></i>
+        <div class="col icon red borderPop" onclick="draw()">
+            <i id="writing"  class="fas fa-pencil-ruler "></i>
             Craft
         </div>
-        <div class="col icon darkBlue" onclick="music()">
+        <div class="col icon darkBlue borderPop" onclick="music()">
 
             <i id="music"  class="fas fa-music borderPop "></i>
             Music
         </div>
     </div>
     <div class="row">
-        <div class="col icon lightBlue" onclick="list()">
+        <div class="col icon lightBlue borderPop" onclick="list()">
             <i>go to list</i>
         </div>
     </div>
