--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
 :root {
     --dark01: #000000;
     --dark02: #333333;
@@ -332,7 +336,136 @@ fieldset {
     
     border-radius: 50%;
     
+    cursor: pointer;
+    
+    position: relative;
+    
+    --border-size: 4px;
+    
 }
+
+/*//animations*/
+
+.col.icon.lightblue.borderPop::before{
+    content: '';
+    
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 50%;
+    
+    border: var(--border-size) solid var(--lightBlue);
+    
+    transition: top, left, right, bottom, 100ms ease-in-out;
+}
+
+.col.icon.lightblue.borderPop:hover::before,
+.col.icon.lightblue.borderPop:focus::before {
+    top: calc(var(--border-size) * -2);
+    left: calc(var(--border-size) * -2);
+    right: calc(var(--border-size) * -2);
+    bottom: calc(var(--border-size) * -2);
+}
+
+
+
+.col.icon.green.borderPop::before{
+    content: '';
+    
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 50%;
+    
+    border: var(--border-size) solid var(--green);
+    
+    transition: top, left, right, bottom, 100ms ease-in-out;
+}
+
+.col.icon.green.borderPop:hover::before,
+.col.icon.green.borderPop:focus::before {
+    top: calc(var(--border-size) * -2);
+    left: calc(var(--border-size) * -2);
+    right: calc(var(--border-size) * -2);
+    bottom: calc(var(--border-size) * -2);
+}
+
+.col.icon.purple.borderPop::before{
+    content: '';
+    
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 50%;
+    
+    border: var(--border-size) solid var(--purple);
+    
+    transition: top, left, right, bottom, 100ms ease-in-out;
+}
+
+.col.icon.purple.borderPop:hover::before,
+.col.icon.purple.borderPop:focus::before {
+    top: calc(var(--border-size) * -2);
+    left: calc(var(--border-size) * -2);
+    right: calc(var(--border-size) * -2);
+    bottom: calc(var(--border-size) * -2);
+}
+
+.col.icon.darkBlue.borderPop::before{
+    content: '';
+    
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 50%;
+    
+    border: var(--border-size) solid var(--darkBlue);
+    
+    transition: top, left, right, bottom, 100ms ease-in-out;
+}
+
+.col.icon.darkBlue.borderPop:hover::before,
+.col.icon.darkBlue.borderPop:focus::before {
+    top: calc(var(--border-size) * -2);
+    left: calc(var(--border-size) * -2);
+    right: calc(var(--border-size) * -2);
+    bottom: calc(var(--border-size) * -2);
+}
+
+.col.icon.red.borderPop::before{
+    content: '';
+    
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 50%;
+    
+    border: var(--border-size) solid var(--red);
+    
+    transition: top, left, right, bottom, 100ms ease-in-out;
+}
+
+.col.icon.red.borderPop:hover::before,
+.col.icon.red.borderPop:focus::before {
+    top: calc(var(--border-size) * -2);
+    left: calc(var(--border-size) * -2);
+    right: calc(var(--border-size) * -2);
+    bottom: calc(var(--border-size) * -2);
+}
+
+
+
+
     
 /*
 BUTTON STYLTES 
