added more views

--- a/views/landing.html
+++ b/views/landing.html
@@ -9,9 +9,8 @@
     <br><br><br>
 
     <div class="row iconRow">
-        <div class="col icon lightBlue borderPop 
-" onclick="writing()">
-            <i id="writing" class="fas fa-pencil-alt  "></i>
+        <div class="col icon lightBlue borderPop " onclick="write()">
+            <i id="write" class="fas fa-pencil-alt  "></i>
             Write
         </div>
         <div class="col icon green borderPop" onclick="garden()">
@@ -19,7 +18,7 @@
             Plant
         </div>
         <div class="col icon purple borderPop" onclick="read()">
-            <i id="read"  class="fas fa-book-reader"></i>
+            <i id="read" class="fas fa-book-reader"></i>
             Read
         </div>
     </div>
@@ -28,12 +27,12 @@
 
     <div class="row iconRow">
         <div class="col icon red borderPop" onclick="draw()">
-            <i id="writing"  class="fas fa-pencil-ruler "></i>
+            <i id="writing" class="fas fa-pencil-ruler "></i>
             Craft
         </div>
         <div class="col icon darkBlue borderPop" onclick="music()">
 
-            <i id="music"  class="fas fa-music borderPop "></i>
+            <i id="music" class="fas fa-music borderPop "></i>
             Music
         </div>
     </div>
