added back buttons

--- a/views/build.html
+++ b/views/build.html
@@ -76,3 +76,5 @@
 <p> 15) If you use a button for the bear's nose, use a needle and thread to sew a smile however you like for the bear. If you don't use a button for his nose, use a needle and thread to create a nose shape in addition to the smile. </p>
 <p>&nbsp;&nbsp;&nbsp; - If you prefer, you can glue on your eyes and nose, but sewing them on will make them more secure. </p>
 <p> 16) Add any embellishments you like! </p>
+
+<button onclick="back()" class="red"> &lt; &lt; </button>
