--- a/views/create.html
+++ b/views/create.html
@@ -49,3 +49,6 @@
 <p> 4) Tape or glue your content down. </p>
 <p> 5) Add stickers or glitter or draw over things. </p>
 
+<button onclick="back()" class="red"> &lt; &lt; </button>
+
+
