--- a/views/exercise.html
+++ b/views/exercise.html
@@ -56,3 +56,6 @@
 <p> 1) Set up your computer or smartphone far enough away from your open space that you can move your arms and legs without bumping into it, but close enough and positioned so that you can still see and hear the instructions from (dance legend) Debbie Allen. </p>
 <p> 2) Decide whether to start with jazz or salsa: Debbie Allen has both options! </p>
 <p> 3) Take the virtual class! </p>
+
+
+<button onclick="back()" class="red"> &lt; &lt; </button>
