--- a/views/garden.html
+++ b/views/garden.html
@@ -1,7 +1,7 @@
-<h1> Draw </h1>
+<h1> Garden </h1>
 
 <!-- Task/Challenge 1 -->
-<h2> MGrow with some seeds</h2>
+<h2>Grow with some seeds</h2>
 
 <h3> Supplies: </h3>
 <p> - Seeds </p>
@@ -46,3 +46,6 @@
 <p> 3) Use pipe cleaners or popsicle sticks and paper to make flowers and plants.</p> 
 <p> 4) Tape or glue those plants to the box.</p>
 <p> 5) Put your box in the window - it’s just like a window box planter! </p>
+
+
+<button onclick="back()" class="red"> &lt; &lt; </button>
