--- a/views/landing.html
+++ b/views/landing.html
@@ -9,32 +9,36 @@
     <br><br><br>
 
     <div class="row iconRow">
-        <div class="col icon lightBlue borderPop " onclick="write()">
-            <i id="write" class="fas fa-pencil-alt  "></i>
+        <div class="col icon lightBlue borderPop" onclick="write()">
+            <i id="write" class="fas fa-pencil-alt"></i>
             Write
         </div>
+        
         <div class="col icon green borderPop" onclick="garden()">
             <i id="garden" class="fas fa-seedling"></i>
             Plant
         </div>
+        
         <div class="col icon purple borderPop" onclick="read()">
             <i id="read" class="fas fa-book-reader"></i>
             Read
         </div>
+        
     </div>
 
     <br><br>
 
     <div class="row iconRow">
         <div class="col icon red borderPop" onclick="draw()">
-            <i id="writing" class="fas fa-pencil-ruler "></i>
-            Craft
+            <i id="writing" class="fas fa-pencil-ruler"></i>
+            Draw
         </div>
+        
         <div class="col icon darkBlue borderPop" onclick="music()">
-
-            <i id="music" class="fas fa-music borderPop "></i>
+            <i id="music" class="fas fa-music"></i>
             Music
         </div>
+        
     </div>
     <div class="row">
         <div class="col icon lightBlue borderPop" onclick="list()">
