--- a/views/write.html
+++ b/views/write.html
@@ -66,3 +66,6 @@
 <p> 6) Pick one of those five topics to focus on for this exercise. </p>
 <p> 7) Set a timer for 30-60 minutes. </p>
 <p> 8) Create a piece of writing of any genre inspired by that topic. (It's okay if the topic morphs as you write!) Try not to edit or research as you go; let your writing flow organically any save revisions for another day. </p>
+
+
+<button onclick="back()" class="red"> &lt; &lt; </button>
