--- a/views/draw.html
+++ b/views/draw.html
@@ -1,7 +1,6 @@
 <h1> Draw </h1>
 
-<!-- Task/Challenge 1 -->
-    
+<!-- Task/Challenge 1 -->    
 <h2 id="draw_01_00"> Make your own paint by number - made for yourself to paint in or for someone else!</h2>
     
 
@@ -51,3 +50,6 @@
 <p> 3) Now go back to that generator and generate another animal. </p>
 <p> 4) Erase features of your first animal and redraw them as the other animal - erase your monkey’s feat and give him duck feet. </p>
 <p> 5) Color it if you want and then come up with a cool new name for your species. </p>
+
+<button onclick="back()" class="red"> &lt; &lt; </button>
+
