--- a/views/landing.html
+++ b/views/landing.html
@@ -30,16 +30,26 @@
 
     <div class="row iconRow">
         <div class="col icon red borderPop" onclick="draw()">
-            <i id="writing" class="fas fa-pencil-ruler"></i>
+            <i id="writing" class="fas fa-pen-fancy"></i>
             Draw
         </div>
         
-        <div class="col icon darkBlue borderPop" onclick="music()">
-            <i id="music" class="fas fa-music"></i>
-            Music
+        <div class="col icon purple borderPop" onclick="create()">
+            <i id="create" class="fas fa-pencil-ruler"></i>
+            Create
+        </div>
+        
+        <div class="col icon darkBlue borderPop" onclick="build()">
+            <i id="build" class="fas fa-hammer"></i>
+            Build
+        </div>
+        <div class="col icon green borderPop" onclick="exercise()">
+            <i id="exercise" class="fas fa-dumbbell"></i>
+            Lift
         </div>
         
     </div>
+    <br>
     <div class="row">
         <div class="col icon lightBlue borderPop" onclick="list()">
             <i>go to list</i>
