--- a/views/myList.html
+++ b/views/myList.html
@@ -6,11 +6,35 @@
     document.getElementById("step03").innerHTML = localStorage.getItem("goal_01_03");
     document.getElementById("step04").innerHTML = localStorage.getItem("goal_01_04");
     document.getElementById("step05").innerHTML = localStorage.getItem("goal_01_05");
+    
+    
+    document.getElementById("goal02").innerHTML = localStorage.getItem("goal_02_00");
+
+    document.getElementById("step06").innerHTML = localStorage.getItem("goal_02_01");
+    document.getElementById("step07").innerHTML = localStorage.getItem("goal_02_02");
+    document.getElementById("step08").innerHTML = localStorage.getItem("goal_02_03");
+    document.getElementById("step09").innerHTML = localStorage.getItem("goal_02_04");
+    document.getElementById("step10").innerHTML = localStorage.getItem("goal_02_05");
+    
+    
+    document.getElementById("goal03").innerHTML = localStorage.getItem("goal_03_00");
+
+    document.getElementById("step11").innerHTML = localStorage.getItem("goal_03_01");
+    document.getElementById("step12").innerHTML = localStorage.getItem("goal_03_02");
+    document.getElementById("step13").innerHTML = localStorage.getItem("goal_03_03");
+    document.getElementById("step14").innerHTML = localStorage.getItem("goal_03_04");
+    document.getElementById("step15").innerHTML = localStorage.getItem("goal_03_05");
+    
+    
 
 </script>
 
 <h2>My Goals</h2>
-<div class="section">
+<div id="warning" class="red">
+    
+</div>
+<!-- GOAL01 -->
+<div class="content light">
     <h3 id="goal01"></h3>
     <ul>
         <li><span id="step01"></span></li>
@@ -19,4 +43,34 @@
         <li><span id="step04"></span></li>
         <li><span id="step05"></span></li>
     </ul>
+    
+</div>
+<!-- GOAL02 -->
+<div class="content light">
+    <h3 id="goal02"></h3>
+    <ul>
+        <li><span id="step06"></span></li>
+        <li><span id="step07"></span></li>
+        <li><span id="step08"></span></li>
+        <li><span id="step09"></span></li>
+        <li><span id="step10"></span></li>
+    </ul>
+    
+</div>
+<!-- GOAL03 -->
+<div class="content light">
+    <h3 id="goal03"></h3>
+    <ul>
+        <li><span id="step11"></span></li>
+        <li><span id="step12"></span></li>
+        <li><span id="step13"></span></li>
+        <li><span id="step14"></span></li>
+        <li><span id="step15"></span></li>
+    </ul>
+    
+</div>
+<div class="row">
+           <button onclick="back()" class="red"> &lt; &lt; </button>
+           <button onclick="clearList()" class="red">clear list</button>
+       
 </div>
