attempted to add a check and a trash button but running into a weird error

--- a/styles.css
+++ b/styles.css
@@ -198,6 +198,14 @@ ul {
     justify-content: center;
 }
 
+.alignLeft {
+    float: left;
+}
+
+.alignRight {
+    float: right;
+}
+
 /* FORMS STYLING
 ---------------------------------
 */
