add new css class for ccompleting goal

--- a/styles.css
+++ b/styles.css
@@ -593,3 +593,13 @@ button:focus {
     outline: 0 !important;
 }
 /* ------------------------------------ */
+
+/*
+Animations
+------------------------------------ 
+*/
+
+.checked{
+    animation-name: goalComplete;
+    
+}
