--- a/views/landing.html
+++ b/views/landing.html
@@ -29,7 +29,7 @@
     <br><br>
 
     <div class="row iconRow">
-        <div class="col icon red borderPop" onclick="draw()">
+        <div class="col icon lightRed borderPop" onclick="draw()">
             <i id="writing" class="fas fa-pen-fancy"></i>
             Draw
         </div>
@@ -44,16 +44,16 @@
             Build
         </div>
         <div class="col icon green borderPop" onclick="exercise()">
-            <i id="exercise" class="fas fa-dumbbell"></i>
-            Lift
+            <i id="exercise" class="fas fa-running"></i>
+            Move
         </div>
         
     </div>
     <br>
     <div class="row">
-        <div class="col icon lightBlue borderPop" onclick="list()">
+        <button class="lightRed" onclick="list()">
             <i>go to list</i>
-        </div>
+        </button>
     </div>
 
 
