--- a/views/myList.html
+++ b/views/myList.html
@@ -39,8 +39,8 @@
        
         <h3 id="goal01" class="alignLeft"></h3>
         <div class="alignRight">
-            <button class="red" ><i id="btn01" class="far fa-trash-alt"></i></button>
-            <button class="green"><i id="btn02" class="fas fa-check"></i></button>
+            <button class="red trash" ><i id="btn01" class="far fa-trash-alt"></i></button>
+            <button onclick="clearGoal()" class="green checkBtn" data-which="01" ><i id="btn02" class="fas fa-check"></i></button>
         </div>
     </div>
 
