added the trash and icon buttons to 02 and 03 of list. Changed the button active state opacity to .8

--- a/views/myList.html
+++ b/views/myList.html
@@ -55,7 +55,11 @@
 </div>
 <!-- GOAL02 -->
 <div class="content light">
-    <h3 id="goal02"></h3>
+    <h3 id="goal02" class="alignLeft"></h3>
+    <div class="alignRight">
+            <button class="red trash" ><i id="btn01" class="far fa-trash-alt"></i></button>
+            <button onclick="clearGoal()" class="green checkBtn" data-which="01" ><i id="btn02" class="fas fa-check"></i></button>
+        </div>
     <ul>
         <li><span id="step06"></span></li>
         <li><span id="step07"></span></li>
@@ -67,8 +71,11 @@
 </div>
 <!-- GOAL03 -->
 <div class="content light">
-    <h3 id="goal03"></h3>
-
+    <h3 id="goal03" class="alignLeft"></h3>
+    <div class="alignRight">
+            <button class="red trash" ><i id="btn01" class="far fa-trash-alt"></i></button>
+            <button onclick="clearGoal()" class="green checkBtn" data-which="01" ><i id="btn02" class="fas fa-check"></i></button>
+        </div>
     <ul>
         <li><span id="step11"></span></li>
         <li><span id="step12"></span></li>
