--- a/views/landing.html
+++ b/views/landing.html
@@ -3,7 +3,7 @@
     <!----header--->
     <div class="row">
         <div class="col">
-            <span id="goal">today I am going to...</span>
+            <span id="goal" style="font-family:sans-serif;color:forestgreen">today I am going to...</span>
         </div>
     </div>
     <br><br><br>
