--- a/views/build.html
+++ b/views/build.html
@@ -1,80 +1,86 @@
 <h1>Build</h1>
 
 <!-- Task/Challenge 1 -->
-<h2>A puzzle</h2>
+<div class="section">
+    <h2 id="build_01_00">A puzzle</h2>
 
-<h3>Supplies:</h3>
+    <h3>Supplies:</h3>
+    <p> - Paper, cardstock, or cardboard</p>
+    <p> - Markers, colored pencils or pens, or paint</p>
+    <p> - 1 pair of scissors</p>
+    <p> - A box or other container for storage</p>
 
-<p> - Paper, cardstock, or cardboard</p>
-<p> - Markers, colored pencils or pens, or paint</p>
-<p> - 1 pair of scissors</p>
-<p> - A box or other container for storage</p>
+    <h3>Steps:</h3>
+    <p id="build_01_01"> 1) Using the markers, colored pencils or pens, or paint, draw or paint a picture or doodled design on your paper, cardstock, or cardboard. </p>
+    <p id="build_01_02"> 2) This can be a picture that is clearly of something, or it can be "abstract art" that is more of a pattern or doodle. </p>
+    <p id="build_01_03"> 3) Using the scissors, cut up your piece of paper, cardstock, or cardboard. To make your cutting more random, turn the paper over so you don't see your design and only see the blank opposite side. </p>
+    <p id="build_01_04"> 4) Place the pieces face-up and put your puzzle back together, or challenge a friend or family member! </p>
+    <p id="build_01_05"> 5) Store the pieces in a box or container for safekeeping. </p>
 
-<h3>Steps:</h3>
-
-<p> 1) Using the markers, colored pencils or pens, or paint, draw or paint a picture or doodled design on your paper, cardstock, or cardboard. </p>
-<p> 2) This can be a picture that is clearly of something, or it can be "abstract art" that is more of a pattern or doodle. </p>
-<p> 3) Using the scissors, cut up your piece of paper, cardstock, or cardboard. To make your cutting more random, turn the paper over so you don't see your design and only see the blank opposite side. </p>
-<p> 4) Place the pieces face-up and put your puzzle back together, or challenge a friend or family member! </p>
-<p> 5) Store the pieces in a box or container for safekeeping. </p>
+    <button onclick="addGoal('build_01')" class="lightBlue">Add to MyList</button>
+</div>
 
 <!-- Task/Challenge 2 -->
-<h2>Your own Cards Against Humanity game</h2>
+<div class="section">
+    <h2 id="build_02_00">Your own Cards Against Humanity game</h2>
 
-<h3>Supplies:</h3>
+    <h3>Supplies:</h3>
+    <p> - <a href="http://s3.amazonaws.com/cah/CAH_MainGame.pdf" target="_blank">This PDF from the Cards Against Humanity website</a></p>
+    <p> - A printer with paper (or cardstock) and ink</p>
+    <p> - A pair of scissors or a paper cutter</p>
+    <p> - A box or other container to hold the cards when they're finished</p>
 
-<p> - <a href="http://s3.amazonaws.com/cah/CAH_MainGame.pdf" target="_blank">This PDF from the Cards Against Humanity website</a></p>
-<p> - A printer with paper (or cardstock) and ink</p>
-<p> - A pair of scissors or a paper cutter</p>
-<p> - A box or other container to hold the cards when they're finished</p>
+    <h3>Steps:</h3>
+    <p id="build_02_01"> 1) Print out the PDF from the link provided, and read the instructions in that PDF <strong>before</strong> printing to see if you want to take any of their printing advice. </p>
+    <p id="build_02_02"> 2) Use your scissors or paper cutter to cut the cards apart from each other. </p>
+    <p id="build_02_03"> 3) Play the game! </p>
+    <p id="build_02_04"> 4) When not in use, store the cards and instructions in the box or container. </p>
 
-<h3>Steps:</h3>
-
-<p> 1) Print out the PDF from the link provided, and read the instructions in that PDF <strong>before</strong> printing to see if you want to take any of their printing advice. </p>
-<p> 2) Use your scissors or paper cutter to cut the cards apart from each other. </p>
-<p> 3) Play the game! </p>
-<p> 4) When not in use, store the cards and instructions in the box or container. </p>
+    <button onclick="addGoal('build_02')" class="lightBlue">Add to MyList</button>
+</div>
 
 <br>
 <br>
 
-<!-- Task/Challenge 3 --> 
-<h2>A teddy bear - consider sending to a loved one!</h2>
+<!-- Task/Challenge 3 -->
+<div class="section">
+    <h2 id="build_03_00">A teddy bear - consider sending to a loved one!</h2>
 
-<h3>Supplies:</h3>
+    <h3>Supplies:</h3>
+    <p> - About 1 yard of soft fabric</p>
+    <p> - A ruler, yardstick, measuring tape, etc., to measure out the fabric</p>
+    <p> - A template: you can draw your own or print <a href="https://www.wikihow.com/Sample/Teddy-Bear-Template" target="_blank">this one</a></p>
+    <p> - 1 pair of paper scissors</p>
+    <p> - 1 pair of fabric scissors</p>
+    <p> - Pins</p>
+    <p> - A needle and thread OR a sewing machine and thread</p>
+    <p> - Some additional fabric or felt of another pattern or color for face, tummy, and ears (if your main fabric is patterned, consider a solid color here, or vice versa)</p>
+    <p> - Stuffing of some kind: cotton balls or cotton batting works well, but so can scrap fabric</p>
+    <p> - 2-3 buttons OR a fabric marker</p>
+    <p> - Optional: embellishments like a necklace or t-shirt, if you want</p>
+    <p> - Optional: for a little more assistance or detailed directions, especially for a less experienced sewer, use <a href="https://www.wikihow.com/Make-an-Easy-Teddy-Bear" target="_blank">this tutorial</a></p>
 
-<p> - About 1 yard of soft fabric</p>
-<p> - A ruler, yardstick, measuring tape, etc., to measure out the fabric</p>
-<p> - A template: you can draw your own or print <a href="https://www.wikihow.com/Sample/Teddy-Bear-Template" target="_blank">this one</a></p>
-<p> - 1 pair of paper scissors</p>
-<p> - 1 pair of fabric scissors</p>
-<p> - Pins</p>
-<p> - A needle and thread OR a sewing machine and thread</p>
-<p> - Some additional fabric or felt of another pattern or color for face, tummy, and ears (if your main fabric is patterned, consider a solid color here, or vice versa)</p>
-<p> - Stuffing of some kind: cotton balls or cotton batting works well, but so can scrap fabric</p>
-<p> - 2-3 buttons OR a fabric marker</p>
-<p> - Optional: embellishments like a necklace or t-shirt, if you want</p>
-<p> - Optional: for a little more assistance or detailed directions, especially for a less experienced sewer, use <a href="https://www.wikihow.com/Make-an-Easy-Teddy-Bear" target="_blank">this tutorial</a></p>
+    <h3>Steps:</h3>
+    <p id="build_03_01"> 1) Carefully cut your teddy bear template out from the page with the paper scissors. Try not to end up with any jagged edges. Discard the excess paper. </p>
+    <p id="build_03_02"> 2) Fold your fabric in half and place the template on top of the fabric. Smooth any lumps out of the fabric. </p>
+    <p id="build_03_03"> 3) Pin the template to both layers of the fabric. Place one pin every 2-3 inches all the way around the edge of the template. </p>
+    <p id="build_03_04"> 4) Cut the fabric around the edges of the template using the fabric scissors. As with cutting out the paper template, try not to end up with any jagged edges. </p>
+    <p id="build_03_05"> 5) Unpin the paper template from the fabric and set it aside; you can use it to make as many bears as you want. </p>
+    <p id="build_03_06"> 6) Cut your felt or additional fabric to the appropriate sizes for the bear's tummy, ears, and face. You may have these sizes from your paper template, too. </p>
+    <p id="build_03_07"> 7) Using your sewing machine or needle and thread, sew the tummy, ears, and face pieces onto the "outside" side of one of the pieces of fabric (the "outside" side being the side you want to end up visible when the bear is finished). </p>
+    <p id="build_03_08"> 8) Pin your two bear outline pieces of fabric together, "outsides" together facing inside: so the tummy, ears, and face pieces you just sewed on should be in between the two pieces of fabric. Place one pin every 2-3 inches almost all the way around the fabric, leaving a 3 inch gap unpinned. </p>
+    <p id="build_03_09"> 9) Using your sewing machine or needle and thread, sew all the way around the pinned areas of the fabric. Leave the unpinned area unsewn. Stitch about 1/2 inch away from the edges of the fabric. Remove the pins as you sew. </p>
+    <p id="build_03_10">&nbsp;&nbsp;&nbsp; - Be sure not to sew over the pins if you are using a machine, as it may damage the machine! </p>
+    <p id="build_03_11"> 10) When you are finished sewing, cut 1/4 inch notches in the edges of the fabric around the whole bear that go from the edge to the seam you've just sewed. Be careful not to cut through the seam! </p>
+    <p id="build_03_12"> 11) Using the gap you left unpinned and then unsewn, turn the bear right-side-out. </p>
+    <p id="build_03_13"> 12) Using the gap again, push your stuffing of choice into the bear. Be sure to get stuffing all the way to the ends of the bear's arms, legs, ears, and head. Test out squeezing and hugging the bear to make sure you're satisfied with how you've stuffed it. </p>
+    <p id="build_03_14"> 13) Pin up the gap, then sew it closed by hand, with a needle and thread, not with a machine. </p>
+    <p id="build_03_15"> 14) To add a face, either draw one on using a fabric marker, or sew on your buttons. You can use three buttons for two eyes and a nose, or just use two buttons for two eyes. </p>
+    <p id="build_03_16"> 15) If you use a button for the bear's nose, use a needle and thread to sew a smile however you like for the bear. If you don't use a button for his nose, use a needle and thread to create a nose shape in addition to the smile. </p>
+    <p id="build_03_17">&nbsp;&nbsp;&nbsp; - If you prefer, you can glue on your eyes and nose, but sewing them on will make them more secure. </p>
+    <p id="build_03_18"> 16) Add any embellishments you like! </p>
 
-<h3>Steps:</h3>
-
-<p> 1) Carefully cut your teddy bear template out from the page with the paper scissors. Try not to end up with any jagged edges. Discard the excess paper. </p>
-<p> 2) Fold your fabric in half and place the template on top of the fabric. Smooth any lumps out of the fabric. </p>
-<p> 3) Pin the template to both layers of the fabric. Place one pin every 2-3 inches all the way around the edge of the template. </p>
-<p> 4) Cut the fabric around the edges of the template using the fabric scissors. As with cutting out the paper template, try not to end up with any jagged edges. </p>
-<p> 5) Unpin the paper template from the fabric and set it aside; you can use it to make as many bears as you want. </p>
-<p> 6) Cut your felt or additional fabric to the appropriate sizes for the bear's tummy, ears, and face. You may have these sizes from your paper template, too. </p>
-<p> 7) Using your sewing machine or needle and thread, sew the tummy, ears, and face pieces onto the "outside" side of one of the pieces of fabric (the "outside" side being the side you want to end up visible when the bear is finished). </p>
-<p> 8) Pin your two bear outline pieces of fabric together, "outsides" together facing inside: so the tummy, ears, and face pieces you just sewed on should be in between the two pieces of fabric. Place one pin every 2-3 inches almost all the way around the fabric, leaving a 3 inch gap unpinned. </p>
-<p> 9) Using your sewing machine or needle and thread, sew all the way around the pinned areas of the fabric. Leave the unpinned area unsewn. Stitch about 1/2 inch away from the edges of the fabric. Remove the pins as you sew. </p>
-<p>&nbsp;&nbsp;&nbsp; - Be sure not to sew over the pins if you are using a machine, as it may damage the machine! </p>
-<p> 10) When you are finished sewing, cut 1/4 inch notches in the edges of the fabric around the whole bear that go from the edge to the seam you've just sewed. Be careful not to cut through the seam! </p>
-<p> 11) Using the gap you left unpinned and then unsewn, turn the bear right-side-out. </p>
-<p> 12) Using the gap again, push your stuffing of choice into the bear. Be sure to get stuffing all the way to the ends of the bear's arms, legs, ears, and head. Test out squeezing and hugging the bear to make sure you're satisfied with how you've stuffed it. </p>
-<p> 13) Pin up the gap, then sew it closed by hand, with a needle and thread, not with a machine. </p>
-<p> 14) To add a face, either draw one on using a fabric marker, or sew on your buttons. You can use three buttons for two eyes and a nose, or just use two buttons for two eyes. </p>
-<p> 15) If you use a button for the bear's nose, use a needle and thread to sew a smile however you like for the bear. If you don't use a button for his nose, use a needle and thread to create a nose shape in addition to the smile. </p>
-<p>&nbsp;&nbsp;&nbsp; - If you prefer, you can glue on your eyes and nose, but sewing them on will make them more secure. </p>
-<p> 16) Add any embellishments you like! </p>
+    <button onclick="addGoal('build_03')" class="lightBlue">Add to MyList</button>
+</div>
 
 <button onclick="back()" class="red"> &lt; &lt; </button>
