fixed write oh god please dont break everything thing

--- a/views/landing.html
+++ b/views/landing.html
@@ -9,8 +9,8 @@
     <br><br><br>
 
     <div class="row iconRow">
-        <div class="col icon lightBlue borderPop" onclick="write()">
-            <i id="write" class="fas fa-pencil-alt"></i>
+        <div class="col icon lightBlue borderPop" onclick="writing()">
+            <i id="writing" class="fas fa-pencil-alt"></i>
             Write
         </div>
         
@@ -18,21 +18,18 @@
             <i id="garden" class="fas fa-seedling"></i>
             Plant
         </div>
-        
-        <div class="col icon purple borderPop" onclick="read()">
-            <i id="read" class="fas fa-book-reader"></i>
-            Read
+        <div class="col icon lightRed borderPop" onclick="draw()">
+            <i id="writing" class="fas fa-pen-fancy"></i>
+            Draw
         </div>
+        
         
     </div>
 
     <br><br>
 
     <div class="row iconRow">
-        <div class="col icon lightRed borderPop" onclick="draw()">
-            <i id="writing" class="fas fa-pen-fancy"></i>
-            Draw
-        </div>
+        
         
         <div class="col icon purple borderPop" onclick="create()">
             <i id="create" class="fas fa-pencil-ruler"></i>
